bk_ida/gccida/g3/copy_addr_to_reg
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_addr_to_reg/src/explow.c:1164:21: error: use of undeclared identifier 'machine_mode'
v4 = gen_reg_rtx( ( machine_mode)v2); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_addr_to_reg/src/explow.c:1172:23: error: use of undeclared identifier 'machine_mode'
copy_to_mode_reg_0( ( machine_mode)x, v3); 
                      ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_addr_to_reg/src/obj/explow.o] Error 1
